--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 /__pycache__/
 /001 - for_fast_development/__pycache__/
 /002 - guide_kivy_python/__pycache__/
+/003 - simple_calc/__pycache__/
+/004 - simple_calc_v2/__pycache__/
+/005 - simple_calc_v3/__pycache__/
 /kivy_venv/
 /001 - for_fast_development/kivy_venv/
 /002 - guide_kivy_python/kivy_venv/
+/003 - simple_calc/kivy_venv/
+/004 - simple_calc_v2/kivy_venv/
+/005 - simple_calc_v3/kivy_venv/
 /.kivy/
 /001 - for_fast_development/.kivy/
 /002 - guide_kivy_python/.kivy/
+/003 - simple_calc/.kivy/
+/004 - simple_calc_v2/.kivy/
+/005 - simple_calc_v3/.kivy/
